--- a/rev2/rev2/templates/layout.html
+++ b/rev2/rev2/templates/layout.html
@@ -1,13 +1,144 @@
+{% load static %}
 <!doctype html>
 <html>
-<head>
-<meta charset ="utf-8"/>
-<title>Instagram with Ask Company</title>
-</head>
+    <head>
+        <meta charset="utf-8"/>
+        <title>Instagram with Ask Company</title>
+        <link
+            rel="stylesheet"
+            href="{% static 'bootstrap-4.5.3-dist/css/bootstrap.min.css' %}"/>
+        <script src="{% static 'jquery-3.5.1.min.js' %}"></script>
+        <script src="{% static 'bootstrap-4.5.3-dist/js/bootstrap.min.js' %}"></script>
+    </head>
 
-<body>
-    {% block content %}
-    {% endblock %}
+    <body>
+    {% if messages %}
+    {% for message in messages %}
+    <div class="alert alert-{{message.tags}}">
+        {{message}}
     
-</body>
+    </div>
+    {% endfor%}
+    {% endif %}
+        <div class="border-bottom mb-3">
+            <div class="container">
+                <div class="row">
+                    <div class="col-sm-12">
+                        <div
+                            class="d-flex flex-column flex-md-row align-items-center p-3 px-md-4 bg-white">
+                            <h5 class="my-0 mr-md-auto font-weight-normal">
+                                <img src="{% static "logo.png"%}" alt="Instagram"/>
+                            </h5>
+                            <nav class="my-2 my-md-0 mr-md-3">
+
+                                <a class="p-2 text-dark" href="/explore/">
+                                    <svg
+                                        aria-label="사람 찾기"
+                                        class="_8-yf5 "
+                                        fill="#262626"
+                                        height="22"
+                                        viewBox="0 0 48 48"
+                                        width="22">
+                                        <path
+                                            clip-rule="evenodd"
+                                            d="M24 0C10.8 0 0 10.8 0 24s10.8 24 24 24 24-10.8 24-24S37.2 0 24 0zm0 45C12.4 45 3 35.6 3 24S12.4 3 24 3s21 9.4 21 21-9.4 21-21 21zm10.2-33.2l-14.8 7c-.3.1-.6.4-.7.7l-7 14.8c-.3.6-.2 1.3.3 1.7.3.3.7.4 1.1.4.2 0 .4 0 .6-.1l14.8-7c.3-.1.6-.4.7-.7l7-14.8c.3-.6.2-1.3-.3-1.7-.4-.5-1.1-.6-1.7-.3zm-7.4 15l-5.5-5.5 10.5-5-5 10.5z"
+                                            fill-rule="evenodd"></path>
+                                    </svg>
+                                </a>
+                                <a class="p-2 text-dark" href="/accounts/activity/">
+                                    <svg
+                                        aria-label="활동 피드"
+                                        class="_8-yf5 "
+                                        fill="#262626"
+                                        height="22"
+                                        viewBox="0 0 48 48"
+                                        width="22">
+                                        <path
+                                            d="M34.6 6.1c5.7 0 10.4 5.2 10.4 11.5 0 6.8-5.9 11-11.5 16S25 41.3 24 41.9c-1.1-.7-4.7-4-9.5-8.3-5.7-5-11.5-9.2-11.5-16C3 11.3 7.7 6.1 13.4 6.1c4.2 0 6.5 2 8.1 4.3 1.9 2.6 2.2 3.9 2.5 3.9.3 0 .6-1.3 2.5-3.9 1.6-2.3 3.9-4.3 8.1-4.3m0-3c-4.5 0-7.9 1.8-10.6 5.6-2.7-3.7-6.1-5.5-10.6-5.5C6 3.1 0 9.6 0 17.6c0 7.3 5.4 12 10.6 16.5.6.5 1.3 1.1 1.9 1.7l2.3 2c4.4 3.9 6.6 5.9 7.6 6.5.5.3 1.1.5 1.6.5.6 0 1.1-.2 1.6-.5 1-.6 2.8-2.2 7.8-6.8l2-1.8c.7-.6 1.3-1.2 2-1.7C42.7 29.6 48 25 48 17.6c0-8-6-14.5-13.4-14.5z"></path>
+                                    </svg>
+                                </a>
+                                <a class="p-2 text-dark" href="#">
+                                    Profile
+                                </a>
+
+                            </nav>
+
+                        </div>
+                    </div>
+                </div>
+            </div>
+
+        </div>
+
+        {% block content %}{% endblock %}
+        <div class="border-top">
+            <div class="container">
+                <footer class="pt-4 my-md-5 pt-md-5">
+                    <div class="row">
+                        <div class="col-12 col-md">
+
+                            <small class="d-block mb-3 text-muted">© 2017-2020</small>
+                        </div>
+                        <div class="col-6 col-md">
+                            <h5>Features</h5>
+                            <ul class="list-unstyled text-small">
+                                <li>
+                                    <a class="text-muted" href="#">Cool stuff</a>
+                                </li>
+                                <li>
+                                    <a class="text-muted" href="#">Random feature</a>
+                                </li>
+                                <li>
+                                    <a class="text-muted" href="#">Team feature</a>
+                                </li>
+                                <li>
+                                    <a class="text-muted" href="#">Stuff for developers</a>
+                                </li>
+                                <li>
+                                    <a class="text-muted" href="#">Another one</a>
+                                </li>
+                                <li>
+                                    <a class="text-muted" href="#">Last time</a>
+                                </li>
+                            </ul>
+                        </div>
+                        <div class="col-6 col-md">
+                            <h5>Resources</h5>
+                            <ul class="list-unstyled text-small">
+                                <li>
+                                    <a class="text-muted" href="#">Resource</a>
+                                </li>
+                                <li>
+                                    <a class="text-muted" href="#">Resource name</a>
+                                </li>
+                                <li>
+                                    <a class="text-muted" href="#">Another resource</a>
+                                </li>
+                                <li>
+                                    <a class="text-muted" href="#">Final resource</a>
+                                </li>
+                            </ul>
+                        </div>
+                        <div class="col-6 col-md">
+                            <h5>About</h5>
+                            <ul class="list-unstyled text-small">
+                                <li>
+                                    <a class="text-muted" href="#">Team</a>
+                                </li>
+                                <li>
+                                    <a class="text-muted" href="#">Locations</a>
+                                </li>
+                                <li>
+                                    <a class="text-muted" href="#">Privacy</a>
+                                </li>
+                                <li>
+                                    <a class="text-muted" href="#">Terms</a>
+                                </li>
+                            </ul>
+                        </div>
+                    </div>
+                </footer>
+            </div>
+        </div>
+    </body>
 </html>
