일곱번째날(2)
django-pydenticon을 활용하여 프로필 디폴트 이미지 구현
프로필 수정 구현과 장고3에서 추가된 TextChoices 활용

--- a/rev2/accounts/templates/accounts/profile_edit_form.html
+++ b/rev2/accounts/templates/accounts/profile_edit_form.html
@@ -6,7 +6,7 @@
         <div class="row">
             <div class="col-sm-6 offset-sm-3">
 
-                {% include "_form.html" with submit_label="회원가입" form_title="회원가입" %}
+                {% include "_form.html" with submit_label="프로필 수정" form_title="프로필 수정" %}
             </div>
         </div>
     </div>
