일곱번쨰날(3)
instagram 앱 생성과 포스팅 쓰기 구현
Instagram post_detail 뷰 구현
유저페이지 구현

--- a/rev2/rev2/templates/layout.html
+++ b/rev2/rev2/templates/layout.html
@@ -58,16 +58,10 @@
                                     </svg>
                                 </a>
                                 <a class="p-2 text-dark" href="{% url "profile_edit" %}">
-                                    {% if user.avatar%}
-                                    <img src ="{{user.avatar.url}}" style ="width:24px;height:24px;"/>
+                               <img src ="{{ user.avatar_url}}" class="rounded-circle" style ="width:24px;height:24px;"/>
                                   
-                                   {% else %}
-                                    {{user}}
-                                    <img src ="{% url "pydenticon_image" user.username %}" style ="width:24px;height:24px;"/>
-                                  
-                                   {% endif%}
                                 </a>
-
+                             
                             </nav>
 
                         </div>
