--- a/rev2/rev2/templates/root.html
+++ b/rev2/rev2/templates/root.html
@@ -6,6 +6,8 @@
             <div class="row">
                 <div class="col-sm-12">
                     Root Instagram
+                    <hr/>
+                    <a href="{% url "instagram:post_new" %}" class="btn btn-primary"> 새 포스팅 쓰기 </a>
                 </div>
             </div>
         </div>
