--- a/rev2/instagram/templates/instagram/user_page.html
+++ b/rev2/instagram/templates/instagram/user_page.html
@@ -1,5 +1,5 @@
 {% extends "instagram/layout.html"%}
-
+{% load thumbnail %}
 {% block content %}
     <div class="container">
         <div class="row pt-2 pb-2">
@@ -16,16 +16,23 @@
                 <a href="{% url "profile_edit" %}" class="btn btn-secondary btn-sm">
                     Edit Profile
                 </a>
+                {% if is_follow %}
+                <a href="{% url "user_unfollow" page_user.username %}">unFollow</a>
+                  
+               
+                {% else %}
+                      <a href="{% url "user_follow" page_user.username %}">Follow</a> 
+                {% endif %}
                 <hr/>
-                0 posts, 0 followers, 0 following
+                {{post_list_count}} posts, 0 followers, 0 following
                 <hr/>
                 {{page_user.name}}
 
             </div>
             <div class="row mt-3">
                 {% for post in post_list %}
-                    <div class="col-sm-4">
-                        <img src="{{post.photo.url}}" alt="{{post.caption}}" style="width:100%;"/>
+                    <div class="col-sm-4 mb-3">
+                        <img src="{% thumbnail post.photo 512x512 crop %}" alt="{{post.caption}}" style="width:100%;"/>
                     </div>
                 {% endfor %}
 
