--- a/rev2/rev2/templates/layout.html
+++ b/rev2/rev2/templates/layout.html
@@ -14,6 +14,7 @@
             href="{% static 'bootstrap-4.5.3-dist/css/bootstrap.min.css' %}"/>
         <script src="{% static 'jquery-3.5.1.min.js' %}"></script>
         <script src="{% static 'bootstrap-4.5.3-dist/js/bootstrap.min.js' %}"></script>
+        <script src ="{% static "jquery.form.3.51.0.min.js"%}"></script>
     </head>
 
     <body>
